# mosaic

./: pyproject.toml
src/mosaic/: gui.py  interactor.py  parallel.py
src/mosaic/commands/: session.py
src/mosaic/copick_integration/: __init__.py  _actions.py  _dialog.py  _reader.py  _session.py  _setup_dialog.py  _uri.py  _writer.py
src/mosaic/pipeline/: executor.py
src/mosaic/widgets/: status_indicator.py  volume_viewer.py
